--- a/index.html
+++ b/index.html
@@ -1,39 +1,553 @@
 <!DOCTYPE html>
 <html lang=en>
-   <head>
-      <meta charset=utf-8>
-      <title>Sachin Gwasikoti</title>
-      <meta name=description content="Sachin Gwasikoti is a Software Engineer who loves building new things.">
-      <meta name=author content="Sachin Gwasikoti">
-      <meta name=viewport content="width=device-width,initial-scale=1">
-      <meta name=theme-color content=#222>
-      <link rel=manifest href=manifest.json>
-      <style>html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}a{background-color:transparent}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}img{border:0}svg:not(:root){overflow:hidden}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}.container{position:relative;width:100%;max-width:960px;margin:0 auto;padding:0 20px;box-sizing:border-box}.column,.columns{width:100%;float:left;box-sizing:border-box}@media(min-width:400px){.container{width:85%;padding:0}}@media(min-width:550px){.container{width:80%}.column,.columns{margin-left:4%}.column:first-child,.columns:first-child{margin-left:0}.one.column,.one.columns{width:4.66666666667%}.two.columns{width:13.3333333333%}.three.columns{width:22%}.four.columns{width:30.6666666667%}.five.columns{width:39.3333333333%}.six.columns{width:48%}.seven.columns{width:56.6666666667%}.eight.columns{width:65.3333333333%}.nine.columns{width:74%}.ten.columns{width:82.6666666667%}.eleven.columns{width:91.3333333333%}.twelve.columns{width:100%;margin-left:0}.one-third.column{width:30.6666666667%}.two-thirds.column{width:65.3333333333%}.one-half.column{width:48%}.offset-by-one.column,.offset-by-one.columns{margin-left:8.66666666667%}.offset-by-two.column,.offset-by-two.columns{margin-left:17.3333333333%}.offset-by-three.column,.offset-by-three.columns{margin-left:26%}.offset-by-four.column,.offset-by-four.columns{margin-left:34.6666666667%}.offset-by-five.column,.offset-by-five.columns{margin-left:43.3333333333%}.offset-by-six.column,.offset-by-six.columns{margin-left:52%}.offset-by-seven.column,.offset-by-seven.columns{margin-left:60.6666666667%}.offset-by-eight.column,.offset-by-eight.columns{margin-left:69.3333333333%}.offset-by-nine.column,.offset-by-nine.columns{margin-left:78%}.offset-by-ten.column,.offset-by-ten.columns{margin-left:86.6666666667%}.offset-by-eleven.column,.offset-by-eleven.columns{margin-left:95.3333333333%}.offset-by-one-third.column,.offset-by-one-third.columns{margin-left:34.6666666667%}.offset-by-two-thirds.column,.offset-by-two-thirds.columns{margin-left:69.3333333333%}.offset-by-one-half.column,.offset-by-one-half.columns{margin-left:52%}}html{font-size:62.5%}body{font-size:1.5em;line-height:1.6;font-weight:300;font-family:Roboto,HelveticaNeue,"Helvetica Neue",Helvetica,Arial,sans-serif;color:#fff}h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:2rem;font-weight:300}h1{font-size:4rem;line-height:1.2;letter-spacing:-.1rem}h2{font-size:3.6rem;line-height:1.25;letter-spacing:-.1rem}h3{font-size:3rem;line-height:1.3;letter-spacing:-.1rem}h4{font-size:2.4rem;line-height:1.35;letter-spacing:-.08rem}h5{font-size:1.8rem;line-height:1.5;letter-spacing:-.05rem}h6{font-size:1.5rem;line-height:1.6;letter-spacing:0}@media(min-width:550px){h1{font-size:5rem}h2{font-size:4.2rem}h3{font-size:3.6rem}h4{font-size:3rem}h5{font-size:2.4rem}h6{font-size:1.5rem}}@media(min-width:1000px){h1{font-size:5.5rem}h2{font-size:4.5rem}h3{font-size:3.9rem}h4{font-size:3.3rem}h5{font-size:2.7rem}h6{font-size:2rem}}@media(min-width:1920px){h1{font-size:6rem}h2{font-size:4.8rem}h3{font-size:4.2rem}h4{font-size:3.6rem}h5{font-size:3rem}h6{font-size:2.1rem}.link-icon{width:54px;height:54px}}p{margin-top:0}a{color:#1eaedb}a:hover{color:#0fa0ce}code{padding:.2rem .5rem;margin:0 .2rem;font-size:90%;white-space:nowrap;background:#f1f1f1;border:1px solid #e1e1e1;border-radius:4px}pre>code{display:block;padding:1rem 1.5rem;white-space:pre}p,pre{margin-bottom:2.5rem}.u-full-width{width:100%;box-sizing:border-box}.u-max-full-width{max-width:100%;box-sizing:border-box}.u-pull-right{float:right}.u-pull-left{float:left}.container:after,.row:after,.u-cf{content:"";display:table;clear:both}.particles-view{background-color:#222;position:fixed;top:0;right:0;bottom:0;left:0;z-index:0}.container{position:relative;text-align:center;margin:0 auto}.note{color:#000;margin-top:35px;display:none}.email-btn{cursor:pointer}.name-header{margin-bottom:0;font-weight:500}h1,h2,h3,h4,h5,h6,i,p{color:#fff}a,a:active,a:hover,a:visited{color:#fff;text-decoration:none}.link-icon{margin:0 8px;width:48px;height:48px}.centered{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%)}</style>
-      <link rel=icon type=image/png href=assets/images/favicon.png>
-   </head>
-   <body id=loader>
-      <div id=particles-js class=particles-view></div>
-      <div class=container>
-         <div class=row>
-            <div class="twelve columns centered">
-               <h1 class=name-header>Sachin Gwasikoti</h1>
-               <h4>Software Engineer</h4>
-               <a href=https://github.com/sachingw777/ target=_blank rel=noopener title=GitHub alt=GitHub>
-                  <div class=link-icon data-webicon=fa:github alt=GitHub></div>
-               </a>
-               <a href=https://www.linkedin.com/in/sachingwasikoti/ target=_blank rel=noopener title=LinkedIn alt=LinkedIn>
-                  <div class=link-icon data-webicon=fa:linkedin alt=LinkedIn></div>
-               </a>
-               <a href=assets/pdf/Sachin_Gwasikoti_Software_Engineer_Resume.pdf target=_blank rel=noopener title=Resume alt=Resume>
-                  <div class=link-icon data-webicon=fa:file-pdf-o alt=Resume></div>
-               </a>
-               <a>
-                  <div class="link-icon email-btn" data-webicon=fa:envelope-o alt=Email></div>
-               </a>
-               <p class=note><code>You can reach me at:</code><br><code><strong>sachingw777 [at] gmail.com</strong></code></p>
-            </div>
+
+<head>
+   <meta charset=utf-8>
+   <title>Sachin Gwasikoti</title>
+   <meta name=description content="Sachin Gwasikoti is a Software Engineer who loves building new things.">
+   <meta name=author content="Sachin Gwasikoti">
+   <meta name=viewport content="width=device-width,initial-scale=1">
+   <meta name=theme-color content=#222>
+   <link rel=manifest href=manifest.json>
+   <style>
+      html {
+         font-family: sans-serif;
+         -ms-text-size-adjust: 100%;
+         -webkit-text-size-adjust: 100%
+      }
+
+      body {
+         margin: 0
+      }
+
+      article,
+      aside,
+      details,
+      figcaption,
+      figure,
+      footer,
+      header,
+      hgroup,
+      main,
+      menu,
+      nav,
+      section,
+      summary {
+         display: block
+      }
+
+      audio,
+      canvas,
+      progress,
+      video {
+         display: inline-block;
+         vertical-align: baseline
+      }
+
+      a {
+         background-color: transparent
+      }
+
+      a:active,
+      a:hover {
+         outline: 0
+      }
+
+      h1 {
+         font-size: 2em;
+         margin: .67em 0
+      }
+
+      img {
+         border: 0
+      }
+
+      svg:not(:root) {
+         overflow: hidden
+      }
+
+      pre {
+         overflow: auto
+      }
+
+      code,
+      kbd,
+      pre,
+      samp {
+         font-family: monospace, monospace;
+         font-size: 1em
+      }
+
+      .container {
+         position: relative;
+         width: 100%;
+         max-width: 960px;
+         margin: 0 auto;
+         padding: 0 20px;
+         box-sizing: border-box
+      }
+
+      .column,
+      .columns {
+         width: 100%;
+         float: left;
+         box-sizing: border-box
+      }
+
+      @media(min-width:400px) {
+         .container {
+            width: 85%;
+            padding: 0
+         }
+      }
+
+      @media(min-width:550px) {
+         .container {
+            width: 80%
+         }
+
+         .column,
+         .columns {
+            margin-left: 4%
+         }
+
+         .column:first-child,
+         .columns:first-child {
+            margin-left: 0
+         }
+
+         .one.column,
+         .one.columns {
+            width: 4.66666666667%
+         }
+
+         .two.columns {
+            width: 13.3333333333%
+         }
+
+         .three.columns {
+            width: 22%
+         }
+
+         .four.columns {
+            width: 30.6666666667%
+         }
+
+         .five.columns {
+            width: 39.3333333333%
+         }
+
+         .six.columns {
+            width: 48%
+         }
+
+         .seven.columns {
+            width: 56.6666666667%
+         }
+
+         .eight.columns {
+            width: 65.3333333333%
+         }
+
+         .nine.columns {
+            width: 74%
+         }
+
+         .ten.columns {
+            width: 82.6666666667%
+         }
+
+         .eleven.columns {
+            width: 91.3333333333%
+         }
+
+         .twelve.columns {
+            width: 100%;
+            margin-left: 0
+         }
+
+         .one-third.column {
+            width: 30.6666666667%
+         }
+
+         .two-thirds.column {
+            width: 65.3333333333%
+         }
+
+         .one-half.column {
+            width: 48%
+         }
+
+         .offset-by-one.column,
+         .offset-by-one.columns {
+            margin-left: 8.66666666667%
+         }
+
+         .offset-by-two.column,
+         .offset-by-two.columns {
+            margin-left: 17.3333333333%
+         }
+
+         .offset-by-three.column,
+         .offset-by-three.columns {
+            margin-left: 26%
+         }
+
+         .offset-by-four.column,
+         .offset-by-four.columns {
+            margin-left: 34.6666666667%
+         }
+
+         .offset-by-five.column,
+         .offset-by-five.columns {
+            margin-left: 43.3333333333%
+         }
+
+         .offset-by-six.column,
+         .offset-by-six.columns {
+            margin-left: 52%
+         }
+
+         .offset-by-seven.column,
+         .offset-by-seven.columns {
+            margin-left: 60.6666666667%
+         }
+
+         .offset-by-eight.column,
+         .offset-by-eight.columns {
+            margin-left: 69.3333333333%
+         }
+
+         .offset-by-nine.column,
+         .offset-by-nine.columns {
+            margin-left: 78%
+         }
+
+         .offset-by-ten.column,
+         .offset-by-ten.columns {
+            margin-left: 86.6666666667%
+         }
+
+         .offset-by-eleven.column,
+         .offset-by-eleven.columns {
+            margin-left: 95.3333333333%
+         }
+
+         .offset-by-one-third.column,
+         .offset-by-one-third.columns {
+            margin-left: 34.6666666667%
+         }
+
+         .offset-by-two-thirds.column,
+         .offset-by-two-thirds.columns {
+            margin-left: 69.3333333333%
+         }
+
+         .offset-by-one-half.column,
+         .offset-by-one-half.columns {
+            margin-left: 52%
+         }
+      }
+
+      html {
+         font-size: 62.5%
+      }
+
+      body {
+         font-size: 1.5em;
+         line-height: 1.6;
+         font-weight: 300;
+         font-family: Roboto, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+         color: #fff
+      }
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+         margin-top: 0;
+         margin-bottom: 2rem;
+         font-weight: 300
+      }
+
+      h1 {
+         font-size: 4rem;
+         line-height: 1.2;
+         letter-spacing: -.1rem
+      }
+
+      h2 {
+         font-size: 3.6rem;
+         line-height: 1.25;
+         letter-spacing: -.1rem
+      }
+
+      h3 {
+         font-size: 3rem;
+         line-height: 1.3;
+         letter-spacing: -.1rem
+      }
+
+      h4 {
+         font-size: 2.4rem;
+         line-height: 1.35;
+         letter-spacing: -.08rem
+      }
+
+      h5 {
+         font-size: 1.8rem;
+         line-height: 1.5;
+         letter-spacing: -.05rem
+      }
+
+      h6 {
+         font-size: 1.5rem;
+         line-height: 1.6;
+         letter-spacing: 0
+      }
+
+      @media(min-width:550px) {
+         h1 {
+            font-size: 5rem
+         }
+
+         h2 {
+            font-size: 4.2rem
+         }
+
+         h3 {
+            font-size: 3.6rem
+         }
+
+         h4 {
+            font-size: 3rem
+         }
+
+         h5 {
+            font-size: 2.4rem
+         }
+
+         h6 {
+            font-size: 1.5rem
+         }
+      }
+
+      @media(min-width:1000px) {
+         h1 {
+            font-size: 5.5rem
+         }
+
+         h2 {
+            font-size: 4.5rem
+         }
+
+         h3 {
+            font-size: 3.9rem
+         }
+
+         h4 {
+            font-size: 3.3rem
+         }
+
+         h5 {
+            font-size: 2.7rem
+         }
+
+         h6 {
+            font-size: 2rem
+         }
+      }
+
+      @media(min-width:1920px) {
+         h1 {
+            font-size: 6rem
+         }
+
+         h2 {
+            font-size: 4.8rem
+         }
+
+         h3 {
+            font-size: 4.2rem
+         }
+
+         h4 {
+            font-size: 3.6rem
+         }
+
+         h5 {
+            font-size: 3rem
+         }
+
+         h6 {
+            font-size: 2.1rem
+         }
+
+         .link-icon {
+            width: 54px;
+            height: 54px
+         }
+      }
+
+      p {
+         margin-top: 0
+      }
+
+      a {
+         color: #1eaedb
+      }
+
+      a:hover {
+         color: #0fa0ce
+      }
+
+      code {
+         padding: .2rem .5rem;
+         margin: 0 .2rem;
+         font-size: 90%;
+         white-space: nowrap;
+         background: #f1f1f1;
+         border: 1px solid #e1e1e1;
+         border-radius: 4px
+      }
+
+      pre>code {
+         display: block;
+         padding: 1rem 1.5rem;
+         white-space: pre
+      }
+
+      p,
+      pre {
+         margin-bottom: 2.5rem
+      }
+
+      .u-full-width {
+         width: 100%;
+         box-sizing: border-box
+      }
+
+      .u-max-full-width {
+         max-width: 100%;
+         box-sizing: border-box
+      }
+
+      .u-pull-right {
+         float: right
+      }
+
+      .u-pull-left {
+         float: left
+      }
+
+      .container:after,
+      .row:after,
+      .u-cf {
+         content: "";
+         display: table;
+         clear: both
+      }
+
+      .particles-view {
+         background-color: #222;
+         position: fixed;
+         top: 0;
+         right: 0;
+         bottom: 0;
+         left: 0;
+         z-index: 0
+      }
+
+      .container {
+         position: relative;
+         text-align: center;
+         margin: 0 auto
+      }
+
+      .note {
+         color: #000;
+         margin-top: 35px;
+         display: none
+      }
+
+      .email-btn {
+         cursor: pointer
+      }
+
+      .name-header {
+         margin-bottom: 0;
+         font-weight: 500
+      }
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      i,
+      p {
+         color: #fff
+      }
+
+      a,
+      a:active,
+      a:hover,
+      a:visited {
+         color: #fff;
+         text-decoration: none
+      }
+
+      .link-icon {
+         margin: 0 8px;
+         width: 48px;
+         height: 48px
+      }
+
+      .centered {
+         position: fixed;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%)
+      }
+   </style>
+   <link rel=icon type=image/png href=assets/images/favicon.png>
+</head>
+
+<body id=loader>
+   <div id=particles-js class=particles-view></div>
+   <div class=container>
+      <div class=row>
+         <div class="twelve columns centered">
+            <h1 class=name-header>Sachin Gwasikoti</h1>
+            <h4>Software Engineer</h4>
+            <a href=https://github.com/sachingw777/ target=_blank rel=noopener title=GitHub alt=GitHub>
+               <div class=link-icon data-webicon=fa:github alt=GitHub></div>
+            </a>
+            <a href=https://www.linkedin.com/in/sachingwasikoti/ target=_blank rel=noopener title=LinkedIn alt=LinkedIn>
+               <div class=link-icon data-webicon=fa:linkedin alt=LinkedIn></div>
+            </a>
+            <a href=assets/pdf/Sachin_Gwasikoti_Senior_Software_Engineer.pdf target=_blank rel=noopener title=Resume
+               alt=Resume>
+               <div class=link-icon data-webicon=fa:file-pdf-o alt=Resume></div>
+            </a>
+            <a>
+               <div class="link-icon email-btn" data-webicon=fa:envelope-o alt=Email></div>
+            </a>
+            <p class=note><code>You can reach me at:</code><br><code><strong>sachingw777 [at] gmail.com</strong></code>
+            </p>
          </div>
       </div>
-      <script src=https://cdn.jsdelivr.net/ga-lite/latest/ga-lite.min.js async></script><script src=https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js></script><script src=assets/js/particles.min.js defer></script><script src=https://cdn.rawgit.com/icons8/bower-webicon/v0.10.7/jquery-webicon.min.js defer></script><script src=https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js defer></script><script type=text/javascript>var galite=galite||{};galite.UA="UA-104911692-1",$(document).ready(function(){particlesJS.load("particles-js"),WebFont.load({google:{families:["Roboto:300,500"]}}),$(".email-btn").click(function(){$("p.note").fadeToggle("fast","linear")})})</script>
-   </body>
+   </div>
+   <script src=https://cdn.jsdelivr.net/ga-lite/latest/ga-lite.min.js async></script>
+   <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js></script>
+   <script src=assets/js/particles.min.js defer></script>
+   <script src=https://cdn.rawgit.com/icons8/bower-webicon/v0.10.7/jquery-webicon.min.js defer></script>
+   <script src=https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js defer></script>
+   <script
+      type=text/javascript>var galite=galite||{};galite.UA="UA-104911692-1",$(document).ready(function(){particlesJS.load("particles-js"),WebFont.load({google:{families:["Roboto:300,500"]}}),$(".email-btn").click(function(){$("p.note").fadeToggle("fast","linear")})})</script>
+</body>
+
 </html>
